k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diarization-svc
spec:
  selector:
    app: diarization
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
